gitops-config/overlays/prod/patches/prod-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexvion-frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: >
      arn:aws:acm:ap-south-1:XXXXXXXXXXXX:
      certificate/PROD-CERT-ID
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/wafv2-acl-arn: >
      arn:aws:wafv2:ap-south-1:XXXXXXXXXXXX:
      global/webacl/nexvion-prod-waf
spec:
  ingressClassName: alb
  rules:
    - host: nexvion.ghanshyam.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexvion-frontend
                port:
                  number: 80
